--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+        <!--<script src="https://raw.githubusercontent.com/socketio/socket.io-client/master/dist/socket.io.js"></script>-->
         <script src="p5.js"></script>
     </head>
     <style>
@@ -13,8 +14,6 @@
     }
     </style>
     <body>
-        
-        <script src="./main.js">
-        </script>
+        <script src="./main.js"></script>
     </body>
 </html>
