working alpha-beta

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
         <!--<script src="https://raw.githubusercontent.com/socketio/socket.io-client/master/dist/socket.io.js"></script>-->
-        <script src="p5.js"></script>
+        <script src="/static/p5.js"></script>
     </head>
     <style>
-    canvas{
-        display: flex;
-    }
     body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: #c4c4c4;
     }
     </style>
     <body>
-        <script src="./main.js"></script>
+        <script src="/static/main.js"></script>
     </body>
 </html>
